tests/paczka1/small_fuzzy/22612519.err
Error in line 7: A892 S560 77,3
Error in line 10: M0LH6Tjd A892 146,43
Error in line 13: A892 A892 31,0
